Development
    .desktop file requested changes
    Apply volume patch fix for gtk versions
0.6.3
    When selecting an item in the playlist, start it playing if media is paused or stopped.
    Set deinterlace filter to be disabled by default in gconf
    Fix file details update on new file, also fix resize issues with file details
    Added Romainian translation
    Set 'pause on mouse click' to be an Advanced Preference
    When embedded draw the black background on load
    Add Preference to plugin option to disable embedding, some people find it useful
    Make icon look better in avant-window-navigator
    Disable the setting of -user-agent when playing streaming media, as mplayer may crash when it is set
    Add Turkish translation by Onur Küçük
    Rework vf patch a little
    Add scale video filter when we add yadif video filter
    Use the video filter yadif by default, but give user the option of disabling it via command line or via preferences
    For dvdnav:// media, add the -nocache option to the mplayer startup command
    Add --reallyverbose command line option, to help with debugging
	Couple of minor cleanups
	Updated pt_BR translation
        Added a new config option to the 'Preferences | Language Settings' tab to allow for locale encoding settings for metadata
        Handle keyboard events when running in DVD w/menu mode to allow arrow and enter key usage
	Make double clicking on playlist item work a little better
	Added Cantonise and Taiwanise translations by hailan
	Make sure DVD chapter length is right in display (makes episode DVDs display better)
	Use icon from panana as found at
		http://www.gnome-look.org/content/show.php/Gnome-mplayer+icon?content=77766
		license is GPL on image
	Added some sr and sr@latin translations to .desktop file
	Fix assertion when switching videos
	Change control bar to use GTK Buttons over custom widgets
	Allow pause/unpause on single click